// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reports should render list depending of TOTAL value expect to render empty list even though is not fetching and items.length > 0. Using Total = 0 1`] = `
<ReportsPage>
  <TableToolbar
    className="pf-u-justify-content-space-between"
    isFooter={false}
    style={
      Object {
        "display": "flex",
        "marginBottom": 0,
        "marginRight": 0,
      }
    }
  >
    <ForwardRef>
      <ToolbarItem
        className="pf-u-mr-xl"
      >
        <Formik
          enableReinitialize={false}
          initialValues={
            Object {
              "filterText": "",
            }
          }
          isInitialValid={false}
          onSubmit={[Function]}
          validate={[Function]}
          validateOnBlur={true}
          validateOnChange={true}
        >
          <Component />
        </Formik>
      </ToolbarItem>
      <ToolbarItem
        className="pf-u-mr-md"
      >
        <Link
          className="pf-c-button pf-m-primary"
          replace={false}
          to="/reports/upload"
        >
          Create
        </Link>
      </ToolbarItem>
    </ForwardRef>
    <ForwardRef>
      <ToolbarItem>
        <Pagination
          className=""
          defaultToFullPage={false}
          firstPage={1}
          isCompact={false}
          isDisabled={false}
          itemCount={0}
          itemsEnd={null}
          itemsStart={null}
          offset={0}
          onFirstClick={[Function]}
          onLastClick={[Function]}
          onNextClick={[Function]}
          onPageInput={[Function]}
          onPerPageSelect={[Function]}
          onPreviousClick={[Function]}
          onSetPage={[Function]}
          ouiaSafe={true}
          page={1}
          perPage={10}
          perPageOptions={
            Array [
              Object {
                "title": "10",
                "value": 10,
              },
              Object {
                "title": "20",
                "value": 20,
              },
              Object {
                "title": "50",
                "value": 50,
              },
              Object {
                "title": "100",
                "value": 100,
              },
            ]
          }
          titles={
            Object {
              "currPage": "Current page",
              "items": "",
              "itemsPerPage": "Items per page",
              "optionsToggle": "Items per page",
              "page": "",
              "paginationTitle": "Pagination",
              "perPageSuffix": "per page",
              "toFirstPage": "Go to first page",
              "toLastPage": "Go to last page",
              "toNextPage": "Go to next page",
              "toPreviousPage": "Go to previous page",
            }
          }
          toggleTemplate={[Function]}
          variant="top"
          widgetId="pagination-options-menu"
        />
      </ToolbarItem>
    </ForwardRef>
  </TableToolbar>
  <Card>
    <CardBody>
      <EmptyState
        variant="full"
      >
        <EmptyStateIcon
          icon={[Function]}
        />
        <Title
          headingLevel="h5"
          size="lg"
        >
          No results found
        </Title>
        <EmptyStateBody>
          No results match the search criteria
        </EmptyStateBody>
      </EmptyState>
    </CardBody>
  </Card>
</ReportsPage>
`;

exports[`Reports should render list depending of TOTAL value expect to render list even though is fetching. Using Total > 0 1`] = `
<ReportsPage>
  <TableToolbar
    className="pf-u-justify-content-space-between"
    isFooter={false}
    style={
      Object {
        "display": "flex",
        "marginBottom": 0,
        "marginRight": 0,
      }
    }
  >
    <ForwardRef>
      <ToolbarItem
        className="pf-u-mr-xl"
      >
        <Formik
          enableReinitialize={false}
          initialValues={
            Object {
              "filterText": "",
            }
          }
          isInitialValid={false}
          onSubmit={[Function]}
          validate={[Function]}
          validateOnBlur={true}
          validateOnChange={true}
        >
          <Component />
        </Formik>
      </ToolbarItem>
      <ToolbarItem
        className="pf-u-mr-md"
      >
        <Link
          className="pf-c-button pf-m-primary"
          replace={false}
          to="/reports/upload"
        >
          Create
        </Link>
      </ToolbarItem>
    </ForwardRef>
    <ForwardRef>
      <ToolbarItem>
        <Pagination
          className=""
          defaultToFullPage={false}
          firstPage={1}
          isCompact={false}
          isDisabled={false}
          itemCount={3}
          itemsEnd={null}
          itemsStart={null}
          offset={0}
          onFirstClick={[Function]}
          onLastClick={[Function]}
          onNextClick={[Function]}
          onPageInput={[Function]}
          onPerPageSelect={[Function]}
          onPreviousClick={[Function]}
          onSetPage={[Function]}
          ouiaSafe={true}
          page={1}
          perPage={10}
          perPageOptions={
            Array [
              Object {
                "title": "10",
                "value": 10,
              },
              Object {
                "title": "20",
                "value": 20,
              },
              Object {
                "title": "50",
                "value": 50,
              },
              Object {
                "title": "100",
                "value": 100,
              },
            ]
          }
          titles={
            Object {
              "currPage": "Current page",
              "items": "",
              "itemsPerPage": "Items per page",
              "optionsToggle": "Items per page",
              "page": "",
              "paginationTitle": "Pagination",
              "perPageSuffix": "per page",
              "toFirstPage": "Go to first page",
              "toLastPage": "Go to last page",
              "toNextPage": "Go to next page",
              "toPreviousPage": "Go to previous page",
            }
          }
          toggleTemplate={[Function]}
          variant="top"
          widgetId="pagination-options-menu"
        />
      </ToolbarItem>
    </ForwardRef>
  </TableToolbar>
  <Table
    aria-label="Reports list"
    borders={true}
    canSelectAll={true}
    cells={
      Array [
        "Name",
        "Status",
        Object {
          "props": Object {
            "className": "pf-u-text-align-center",
          },
          "title": "",
        },
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "title": <span>
                My report name 36
              </span>,
            },
            Object {
              "title": <p>
                <InProgressIcon
                  className="progress"
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
                 Analyzing the upload file
              </p>,
            },
            Object {
              "title": "",
            },
          ],
        },
        Object {
          "cells": Array [
            Object {
              "title": <span>
                My report name 37
              </span>,
            },
            Object {
              "title": <p>
                <InProgressIcon
                  className="progress"
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
                 Analyzing the upload file
              </p>,
            },
            Object {
              "title": "",
            },
          ],
        },
        Object {
          "cells": Array [
            Object {
              "title": <span>
                My report name 38
              </span>,
            },
            Object {
              "title": <p>
                <InProgressIcon
                  className="progress"
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
                 Analyzing the upload file
              </p>,
            },
            Object {
              "title": "",
            },
          ],
        },
      ]
    }
    variant={null}
  >
    <TableHeader />
    <Component />
    <tfoot>
      <tr>
        <td
          colSpan={10}
        >
          <Pagination
            className=""
            defaultToFullPage={false}
            firstPage={1}
            isCompact={false}
            isDisabled={false}
            itemCount={3}
            itemsEnd={null}
            itemsStart={null}
            offset={0}
            onFirstClick={[Function]}
            onLastClick={[Function]}
            onNextClick={[Function]}
            onPageInput={[Function]}
            onPerPageSelect={[Function]}
            onPreviousClick={[Function]}
            onSetPage={[Function]}
            ouiaSafe={true}
            page={1}
            perPage={10}
            perPageOptions={
              Array [
                Object {
                  "title": "10",
                  "value": 10,
                },
                Object {
                  "title": "20",
                  "value": 20,
                },
                Object {
                  "title": "50",
                  "value": 50,
                },
                Object {
                  "title": "100",
                  "value": 100,
                },
              ]
            }
            titles={
              Object {
                "currPage": "Current page",
                "items": "",
                "itemsPerPage": "Items per page",
                "optionsToggle": "Items per page",
                "page": "",
                "paginationTitle": "Pagination",
                "perPageSuffix": "per page",
                "toFirstPage": "Go to first page",
                "toLastPage": "Go to last page",
                "toNextPage": "Go to next page",
                "toPreviousPage": "Go to previous page",
              }
            }
            toggleTemplate={[Function]}
            variant="top"
            widgetId="pagination-options-menu"
          />
        </td>
      </tr>
    </tfoot>
  </Table>
</ReportsPage>
`;
